refactor(frontend): refactor from lab9

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,15 +10,15 @@
     />
     <meta
       name="description"
-      content="Lab9 Client | Awesome additional task for programming laboratory work"
+      content="Lab1 | Awesome IS laboratory work"
     />
     <meta name="theme-color" content="#4a90e2" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Lab9 Client | Awesome additional task for programming laboratory work</title>
-
+    <title>Lab1 | Awesome IS laboratory work</title>
+    
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap"
       rel="stylesheet"
