--- a/frontend/public/404.html
+++ b/frontend/public/404.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Lab9 Client | Redirect</title>
+  <title>lab1 Client | Redirect</title>
   <meta
     name="viewport"
     content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no, user-scalable=0"
